--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>AXIT</title>
 </head>
 <body>
-    <header class='header'>
+    <header class='header sticky-top'>
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
